# LLMUsageTray

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  release-on-main.yml
docs/: PORTABILITY.md  RELEASE.md
resources/: app.rc
resources/macos/: Info.plist.in
scripts/: bump-version.ps1
src/: base64url.cpp  base64url.h  credential_store.h  http_client.h  json_util.cpp  json_util.h  main.cpp  oauth.cpp  oauth.h  platform.h  usage.cpp  usage.h
src/platform/linux/: credential_store.cpp
src/platform/macos/: credential_store.cpp
src/platform/unix/: http_client.cpp  local_callback_server.cpp  platform.cpp
src/platform/windows/: credential_store.cpp  http_client.cpp  local_callback_server.cpp  platform.cpp
